--- a/crimemap_web/templates/leaflet.html
+++ b/crimemap_web/templates/leaflet.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Hello</title>
+<title>Tulsa Crime Map</title>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 <link rel="stylesheet" href="/static/leaflet.label.css" />
 </head>
@@ -9,7 +9,6 @@
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 <script src="/static/leaflet.label.js"></script>
 <script>
-
 		var map = L.map('map').setView([36.14,-95.96], 13);
 
 		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
@@ -19,11 +18,10 @@
 				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 			id: 'examples.map-i86knfo3'
 		}).addTo(map);
-        var marker;
+		
         {% for crime in crimes %}
             L.marker([{{crime.geocode[0]}}, {{crime.geocode[1]}}]).addTo(map).bindLabel("{{crime.description}}", { noHide: true }).showLabel();
         {% endfor %}
-
 	</script>
 <p>
 This data is scraped from the Tulsa Police Department's <a href="https://www.tulsapolice.org/live-calls-/police-calls-near-you.aspx">Recent Calls Near You</a> feature.
@@ -34,5 +32,7 @@ Many other data sources are available for free from <a href="http://www.cityoftu
 <p>
 Get this data as <a href="/raw.csv">comma-separated value file</a>
 </p>
+<p>
+This code is on Bitbucket <a href="https://bitbucket.org/duplico/tulsa-crime-map">here</a>.
 </body>
 </html>
