Pull vendor css into Sass/Compass project for performance and customization ++

--- a/crimemap_web/static/sass/style.scss
+++ b/crimemap_web/static/sass/style.scss
@@ -12,6 +12,9 @@
 @import 'global/_normalize.css.scss';
 @import 'global/type';
 
+@import 'leaflet';
+@import 'leaflet.label';
+
 body {
   background-color: $grey-light;
   color: $grey-dark;
