--- a/crimemap_web/static/css/style.css
+++ b/crimemap_web/static/css/style.css
@@ -726,7 +726,7 @@ code, kbd, pre, samp {
 
 /* general typography */
 .leaflet-container {
-  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font: 12px/1.5 "Open Sans", Helvetica, Arial, "Nimbus Sans L", sans-serif;
 }
 
 /* general toolbar styles */
@@ -1027,18 +1027,23 @@ code, kbd, pre, samp {
 }
 
 .leaflet-label {
-  background: #ebebeb;
-  background: rgba(235, 235, 235, 0.81);
+  background: #eaeaea;
+  background: rgba(234, 234, 234, 0.85);
   background-clip: padding-box;
-  border-color: #777;
-  border-color: rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  border-color: #444444;
+  border-color: rgba(0, 0, 0, 0.5);
   border-radius: 4px;
   border-style: solid;
-  border-width: 4px;
-  color: #111;
+  border-width: 2px;
+  color: #444444;
   display: block;
-  font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  font-family: "Open Sans", Helvetica, Arial, "Nimbus Sans L", sans-serif;
+  font-size: 14px;
+  line-height: 1.25;
+  font-weight: 600;
+  text-shadow: 1px 1px 0 white;
   padding: 1px 6px;
   position: absolute;
   -webkit-user-select: none;
@@ -1061,19 +1066,19 @@ code, kbd, pre, samp {
   border-bottom: 6px solid transparent;
   content: none;
   position: absolute;
-  top: 5px;
+  top: 4px;
 }
 
 .leaflet-label:before {
   border-right: 6px solid black;
   border-right-color: inherit;
-  left: -10px;
+  left: -8px;
 }
 
 .leaflet-label:after {
   border-left: 6px solid black;
   border-left-color: inherit;
-  right: -10px;
+  right: -8px;
 }
 
 .leaflet-label-right:before,
