--- a/crimemap_web/static/sass/_leaflet.label.scss
+++ b/crimemap_web/static/sass/_leaflet.label.scss
@@ -1,16 +1,20 @@
 .leaflet-label {
-	background: rgb(235, 235, 235);
-	background: rgba(235, 235, 235, 0.81);
+	background: $grey-light;
+	background: rgba($grey-light, 0.85);
 	background-clip: padding-box;
-	border-color: #777;
-	border-color: rgba(0,0,0,0.25);
+	@include box-shadow(0 0 4px rgba($black, 0.25));
+	border-color: $grey-dark;
+	border-color: rgba(0,0,0,0.5);
 	border-radius: 4px;
 	border-style: solid;
-	border-width: 4px;
-	color: #111;
+	border-width: 2px;
+	color: $grey-dark;
 	display: block;
-	font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
-	font-weight: bold;
+	font-family: $opensans;
+	font-size: 14px;
+	line-height: 1.25;
+	font-weight: 600;
+	@include text-shadow(1px 1px 0 $white);
 	padding: 1px 6px;
 	position: absolute;
 	-webkit-user-select: none;
@@ -33,19 +37,19 @@
 	border-bottom: 6px solid transparent;
 	content: none;
 	position: absolute;
-	top: 5px;
+	top: 4px;
 }
 
 .leaflet-label:before {
 	border-right: 6px solid black;
 	border-right-color: inherit;
-	left: -10px;
+	left: -8px;
 }
 
 .leaflet-label:after {
 	border-left: 6px solid black;
 	border-left-color: inherit;
-	right: -10px;
+	right: -8px;
 }
 
 .leaflet-label-right:before,
