--- a/crimemap_web/templates/leaflet.html
+++ b/crimemap_web/templates/leaflet.html
@@ -7,19 +7,22 @@
   <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>Tulsa Crime Map</h1>
-  </header>
-  <main>
-    <div id="map"></div>
-  </main>
-  <footer>
-    <ul>
-      <li>This data is scraped from the Tulsa Police Department's <a href="https://www.tulsapolice.org/live-calls-/police-calls-near-you.aspx">Recent Calls Near You</a> feature.</li>
-      <li>Many other data sources are available for free from <a href="http://www.cityoftulsa.org/opentulsa">Open Tulsa</a>, the City of Tulsa's open data initiative.</li>
-      <li>Get this data as <a href="/raw.csv">comma-separated value file</a>. This code is on Bitbucket <a href="https://bitbucket.org/duplico/tulsa-crime-map">here</a>.</li>
-    </ul>
-  </footer>
+
+  <div class="container">
+    <header>
+      <h1>Tulsa Crime Map</h1>
+    </header>
+    <main>
+      <div id="map"></div>
+    </main>
+    <footer>
+      <ul>
+        <li>This data is scraped from the Tulsa Police Department's <a href="https://www.tulsapolice.org/live-calls-/police-calls-near-you.aspx">Recent Calls Near You</a> feature.</li>
+        <li>Many other data sources are available for free from <a href="http://www.cityoftulsa.org/opentulsa">Open Tulsa</a>, the City of Tulsa's open data initiative.</li>
+        <li>Get this data as <a href="/raw.csv">comma-separated value file</a>. This code is on Bitbucket <a href="https://bitbucket.org/duplico/tulsa-crime-map">here</a>.</li>
+      </ul>
+    </footer>
+  </div>
 
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="/static/leaflet.label.js"></script>
