--- a/crimemap_web/templates/leaflet.html
+++ b/crimemap_web/templates/leaflet.html
@@ -7,31 +7,46 @@
   <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
-<div id="map" style="width: 600px; height: 400px"></div>
-<script src="/static/leaflet.js"></script>
-<script src="/static/leaflet.label.js"></script>
-<script>
-		var map = L.map('map').setView([36.14,-95.96], 13);
 
-		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'examples.map-i86knfo3'
-		}).addTo(map);
-        var marker;
+  <div class="container">
+    <header>
+      <h1>Tulsa Crime Map</h1>
+    </header>
+    <main>
+      <div id="map"></div>
+    </main>
+    <footer>
+      <ul>
+        <li>This data is scraped from the Tulsa Police Department's <a href="https://www.tulsapolice.org/live-calls-/police-calls-near-you.aspx">Recent Calls Near You</a> feature.</li>
+        <li>Many other data sources are available for free from <a href="http://www.cityoftulsa.org/opentulsa">Open Tulsa</a>, the City of Tulsa's open data initiative.</li>
+        <li>Get this data as <a href="/raw.csv">comma-separated value file</a>. This code is on Bitbucket <a href="https://bitbucket.org/duplico/tulsa-crime-map">here</a>.</li>
+      </ul>
+    </footer>
+  </div>
+  <script src="/static/leaflet.js"></script>
+  <script src="/static/leaflet.label.js"></script>
+  <script>
+  	var map = L.map('map').setView([36.14,-95.96], 13);
 
-        {% for crime in crimes %}
-           marker = L.marker([{{crime.geocode[0]}}, {{crime.geocode[1]}}], {opacity: 0.75});
-           marker.bindPopup("{{crime.timestamp.ctime()}}: {{crime.location}}");
-           marker.bindLabel("{{crime.description}}", { noHide: true }).showLabel().addTo(map);
-           marker.addTo(map);
-        {% endfor %}
+  	L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
+  		maxZoom: 18,
+  		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+  			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+  			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+  		id: 'examples.map-i86knfo3'
+  	}).addTo(map);
+    var marker;
 
-        {% for fire in fires %}
-            L.marker([{{fire.geocode[0]}}, {{fire.geocode[1]}}], {opacity: 0.6, icon: new L.Icon.Default({iconUrl: '/static/images/red-marker-icon.png', iconRetinaUrl: '/static/images/red-marker-icon-2x.png'})}).addTo(map).bindLabel("{{fire.description}}", { noHide: true, direction: 'left' }).showLabel();
-        {% endfor %}
+    {% for crime in crimes %}
+       marker = L.marker([{{crime.geocode[0]}}, {{crime.geocode[1]}}], {opacity: 0.75});
+       marker.bindPopup("{{crime.timestamp.ctime()}}: {{crime.location}}");
+       marker.bindLabel("{{crime.description}}", { noHide: true }).showLabel().addTo(map);
+       marker.addTo(map);
+    {% endfor %}
+
+    {% for fire in fires %}
+        L.marker([{{fire.geocode[0]}}, {{fire.geocode[1]}}], {opacity: 0.6, icon: new L.Icon.Default({iconUrl: '/static/images/red-marker-icon.png', iconRetinaUrl: '/static/images/red-marker-icon-2x.png'})}).addTo(map).bindLabel("{{fire.description}}", { noHide: true, direction: 'left' }).showLabel();
+    {% endfor %}
 
 		
 	</script>
