--- a/crimemap_web/templates/leaflet.html
+++ b/crimemap_web/templates/leaflet.html
@@ -28,12 +28,13 @@
   <script>
   	var map = L.map('map').setView([36.14,-95.96], 13);
 
-  	L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
+  	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
   		maxZoom: 18,
   		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
   			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
   			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-  		id: 'examples.map-i86knfo3'
+  		id: 'duplico.pedfj600',
+                accessToken: 'pk.eyJ1IjoiZHVwbGljbyIsImEiOiJjaWx3b21zcWowMmQzdjlrc2d5amh3Z3B2In0.XoeuNNIOdY4vrfGRF9qkCg'
   	}).addTo(map);
     var marker;
 
